fix safari auto style on mobile nubmber

--- a/src/components/FooterItem/FooterItem.module.css
+++ b/src/components/FooterItem/FooterItem.module.css
@@ -9,11 +9,12 @@
 }
 
 .info-container .info-text .footer-info {
-  color: #b3b3b3;
+  color: #b3b3b3 !important;
   text-align: start;
   font-size: 1rem;
+  text-decoration: none;
+  -webkit-text-fill-color: inherit;
 }
-
 
 .info-container .icon-container {
   display: flex;
